# c

./: .gitignore  CLAUDE.md  Makefile.am  README.md  configure.ac
apps/anim/: Makefile.am  main.c
apps/barrier/: Makefile.am  console.c  console.h  main.c
apps/barrier/assets/: generate_sprites.py  tank.ini
apps/barrier/maps/: battlefield.ini  flat_arena.ini  island.ini  ridge.ini  terraced.ini  twin_peaks.ini  valley.ini
apps/barrier/units/: rifleman.ini
apps/battleforge/: Makefile.am  battleforge  console.c  console.h  main.c
apps/battleforge/assets/: test_unit.ini
apps/bloom/: Makefile.am  main.c
apps/comic/: Makefile.am  main.c
apps/crt/: Makefile.am  main.c
apps/game/: Makefile.am  game.c  game.h  input.h  main.c
apps/halftone/: Makefile.am  main.c
apps/mech/: Makefile.am  main.c
apps/mech/assets/: scene.ini  showcase.ini  valkyrie.ini
apps/mirrors/: Makefile.am  main.c
apps/nbody/: Makefile.am  input.c  input.h  main.c  nbody.c  nbody.h  render.c  render.h
apps/orb/: Makefile.am  main.c
apps/pixelart/: Makefile.am  main.c
apps/rtdemo/: Makefile.am  main.c
apps/showcase/: Makefile.am  main.c
apps/toon/: Makefile.am  main.c
apps/tty3d/: Makefile.am  main.c
apps/ttycam/: Makefile.am  main.c
docs/: slice-sprite-guide.md
docs/ideas/: README.md
docs/ideas/barnstorm/: CLAUDE.md  README.md
docs/ideas/flat-poly/: CLAUDE.md  README.md
docs/ideas/gpu-raytrace/: CLAUDE.md  README.md
docs/ideas/origami-armies/: CLAUDE.md  README.md
docs/ideas/raster-software/: CLAUDE.md  README.md
docs/ideas/raycast-grid/: CLAUDE.md  README.md
docs/ideas/sphere-bricks/: CLAUDE.md  README.md
docs/ideas/sphere-voxel/: CLAUDE.md  README.md
docs/ideas/voxel-space/: CLAUDE.md  README.md
docs/plans/: 2026-02-20-nbody-zoom-design.md  2026-02-25-nbody-camera-pan-design.md  2026-02-25-nbody-camera-pan.md  2026-02-26-nbody-3d-design.md  2026-02-26-nbody-3d.md  2026-02-26-thread-pool-design.md  2026-02-26-thread-pool.md  2026-03-05-encapsulation-design.md  2026-03-05-encapsulation.md  2026-03-06-dispatch-tables-design.md  2026-03-06-dispatch-tables.md
docs/superpowers/plans/: 2026-03-11-battleforge-engine.md  2026-03-11-raytrace-sprites.md  2026-03-12-battleforge-mouse-interaction.md  2026-03-15-slice-sprite-loader.md  2026-03-16-heightfield-terrain.md  2026-03-17-ingame-console.md  2026-03-25-ecs-component-refactor.md  2026-04-14-rt-renderer-cpu-refactor.md  2026-04-16-rt-renderer-opengl-backend.md  2026-04-16-rt-renderer-vtable-refactor.md
docs/superpowers/specs/: 2026-03-11-battleforge-engine-design.md  2026-03-11-raytrace-sprites-design.md  2026-03-12-battleforge-mouse-interaction-design.md  2026-03-15-slice-sprite-loader-design.md  2026-03-16-heightfield-terrain-design.md  2026-03-17-ingame-console-design.md  2026-03-24-ecs-component-refactor-design.md
libs/battleforge/: Makefile.am  battleforge.c  battleforge.h
libs/ini/: Makefile.am  ini.c  ini.h
libs/ini/tests/: check_ini  check_ini.c  test.ini
libs/math/: Makefile.am  matrix.h  vector.h
libs/math/tests/: check_matrix.c  check_vector.c
libs/physics/: Makefile.am  physics.c  physics.h
libs/physics/tests/: check_physics.c
libs/postfx/: Makefile.am  postfx.c  postfx.h
libs/raytrace/: Makefile.am  box.c  box.h  camera.c  camera.h  cone.h  cylinder.h  disc.c  disc.h  gl_compat.c  gl_compat.h  heightfield.c  heightfield.h  material.h  mesh.h  plane.h  raytrace.c  raytrace.h  renderer.c  renderer.h  rt_color.h  scene.c  scene.h  scene_accel.c  scene_accel.h  sphere.h  sprite.h  texture.h  torus.h  triangle.c  triangle.h  viewport.h
libs/raytrace/cpu/: box.c  bvh.c  bvh.h  cone.c  cylinder.c  disc.c  heightfield.c  mesh.c  plane.c  render_chunk.c  render_chunk.h  renderer.c  sphere.c  sprite.c  torus.c  triangle.c
libs/raytrace/opengl/: renderer.c
libs/scene/: Makefile.am  fbx.c  fbx.h  obj.c  obj.h  scene.c  scene.h  texture_load.c
libs/scene/tests/: check_fbx.c
libs/slice/: Makefile.am  slice.c  slice.h
libs/term/: Makefile.am  term.h  term_caps.c  term_input.c  term_render.c  term_screen.c
libs/thread/: Makefile.am  thread_pool.c  thread_pool.h
scripts/: build-barrier-windows.sh  build-windows.sh  gen_mesh.py  render_spritesheet.py  test_spritesheet.py
