# Makefile.am (Root Directory)
ACLOCAL_AMFLAGS = -I m4

# Order matters: build the library first, then the apps!
SUBDIRS = libs/math libs/thread libs/physics libs/scene libs/raytrace libs/postfx libs/ini libs/slice libs/battleforge apps/nbody apps/rtdemo apps/mirrors apps/orb apps/mech apps/barrier apps/anim apps/pixelart apps/comic apps/bloom apps/halftone apps/toon
